# BFES

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main_benchmarking.cpp
ApacheFlink_x_Java/: BFES_Flink_Job.scala  BFES_Insert  BFES_Insert_Flink  MurmurHash3.java  pom.xml
ApacheFlink_x_Java/src/main/java/FlinkBFESTest/: BFES.java  BFESFunction.java  BFES_Snapshot.java  FlinkBFESTest.java  MurmurHash3.java
src/BFESketch/: BFESketch.hpp
src/BFESketch/GibbsSampler/GibbsSamplerContainer/: GibbsSamplerContainer.hpp
src/BFESketch/GibbsSampler/GibbsSamplerEngine/: GibbsSamplerEngine.hpp
src/BFESketch/GibbsSampler/InitialPoint/: InitialPoint.cpp  InitialPoint.hpp
src/BFESketch/Prior/ExponentialPrior/: ExponentialPrior.hpp
src/BFESketch/Prior/NormalPrior/: NormalPrior.cpp  NormalPrior.hpp
src/BFESketch/Prior/ParetoPrior/: ParetoPrior.hpp
src/BFESketch/Sensor/HyperplaneSensor/: HyperplaneSensor.cpp  HyperplaneSensor.hpp
src/BFESketch/Sensor/HyperplaneStructure/: HyperplaneStructure.cpp  HyperplaneStructure.hpp
src/BFESketch/Sensor/LatentBase/: LatentBase.hpp
src/BFESketch/Sensor/LatentBaseMatrix/: LatentBaseMatrix.cpp  LatentBaseMatrix.hpp
src/BFESketch/Sensor/LatentBaseVector/: LatentBaseVector.cpp  LatentBaseVector.hpp
src/BFESketch/Sensor/SensorInterface/: SensorInterface.cpp  SensorInterface.hpp
src/BFESketch/Sensor/SparseHyperplane/: SparseHyperplane.cpp  SparseHyperplane.hpp
src/BFESketch/Utility/: Utility.hpp
src/CBSketch/: CBSketch.hpp
src/CCBSketch/: CCBSketch.hpp
src/CMSketch/: CMSketch.hpp
src/CSketch/: CSketch.hpp
src/CUSketch/: CUSketch.hpp
src/DPSketch/: DPSketch.hpp
src/GeneralUtility/CountDistinct/: dense_array.h  dense_array_test.cc  distinct_counter.h  distinct_counter_test.cc
src/GeneralUtility/DumpContainer/: DumpContainer.hpp
src/GeneralUtility/EstimationAnalysis/: EstimationAnalysis.hpp
src/GeneralUtility/Stopwatch/: Stopwatch.hpp
src/GeneralUtility/TraceContainer/: TraceContainer.cpp  TraceContainer.hpp
src/NIGPSketch/: NIGPSketch.hpp
src/PRSketch/: PRSketch.hpp
src/SeqSketch/: SeqSketch.hpp
